tests/snapshots/cli__resume_with_held_activity_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log-file"
    - "C:\\Users\\dailyuse\\backup\\PARA\\Personal\\2 Areas\\Developer\\Maintenance\\pace\\pace-rs\\pace\\./tests/generated\\.tmpy6wwam\\activities.pace.toml"
    - resume
---
success: true
exit_code: 0
----- stdout -----
Resumed 📆  Activity: "MyActivity" (MyCategory::SubCategory) started just now in UTC+01:00

----- stderr -----
