tests/snapshots/cli__review_from_to_filter_category_glob_back_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log-file"
    - "./tests/fixtures/activity_tracker/activities.pace.toml"
    - review
    - "--from"
    - 2024-02-26
    - "--to"
    - 2024-02-28
    - "--category"
    - dev*
---
success: true
exit_code: 0
----- stdout -----
╭─────────────┬─────────────────────┬─────────────────────┬─────────────────╮
│                 Your activity insights for the period:                    │
│                                                                           │
│                 2024-02-26 00:00:00 - 2024-02-28 00:00:00                 │
├─────────────┼─────────────────────┼─────────────────────┼─────────────────┤
│  Category   │     Description     │ Duration (Sessions) │ Breaks (Amount) │
├─────────────┼─────────────────────┼─────────────────────┼─────────────────┤
│ development │                     │              3m 22s │           4m 4s │
├─────────────┼─────────────────────┼─────────────────────┼─────────────────┤
│    pace     │ Implementing Review │          3m 22s (1) │       4m 4s (1) │
├─────────────┼─────────────────────┼─────────────────────┼─────────────────┤
│ development │                     │                 51s │             10s │
├─────────────┼─────────────────────┼─────────────────────┼─────────────────┤
│   rustic    │    More Testing     │             51s (2) │         10s (1) │
├─────────────┼─────────────────────┼─────────────────────┼─────────────────┤
│    Total    │                     │              4m 13s │          4m 14s │
╰─────────────┴─────────────────────┴─────────────────────┴─────────────────╯

----- stderr -----
